@@ -3,6 +3,16 @@
 	* AssemblyInfo.cs:
 	  
 
+	* Session/Session.cs:
+	* Session/Game/Game.cs:
+	  Changed the algorithm for generating characters for game in
+	  order to avoid duplicate characters in the game.
+
+2011-09-29  WOnder93  <omosnacek@gmail.com>
+
+	* AssemblyInfo.cs:
+	  
+
 	* Session/Game/Player.cs:
 	  Changed the way that the 'missed' effect of a card is
 	  evaluated so that Elena Fuente can respond with Dodge and
